--- a/apidisplay/src/App.css
+++ b/apidisplay/src/App.css
@@ -95,3 +95,17 @@
   font-weight: bold;
   margin: 0px 0px 150px 80px;
 }
+
+.weather-container {
+  font-weight: bold;
+}
+
+.weather-section {
+    left: 0;
+    line-height: 200px;
+    margin-top: -100px;
+    position: absolute;
+    text-align: center;
+    top: 50%;
+    width: 100%;
+}
